<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<modules>
		<module>questionario-adapter-rest</module>
		<module>questionario-start</module>
		<module>questionario-read</module>
		<module>questionario-write</module>
		<module>questionario-domain</module>
		<module>questionario-adapter-mongo</module>
		<module>questionario-command-query</module>
		<module>questionario-handlers-resolver</module>
		<module>questionario-adapter-kafka</module>

	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.5.RELEASE</version>
		<relativePath />
	</parent>
	<groupId>easy.quality</groupId>
	<artifactId>ms-questionario</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ms-questionario</name>


	<properties>
		<java.version>14</java.version>
		<h2.version>1.4.200</h2.version>
		<lombok.version>1.18.10</lombok.version>
		<mockito-all.version>1.10.19</mockito-all.version>
		<junit-jupiter.version>5.5.2</junit-jupiter.version>
		<mockito-junit-jupiter.version>3.1.0</mockito-junit-jupiter.version>
		<springfox-version>2.7.0</springfox-version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>14</release>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
					<source>14</source>
					<target>14</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- Inner dependencies -->

			<!-- External Dependencies -->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>

			<dependency>
				<groupId>easy.quality</groupId>
				<artifactId>questionario-adapter-rest</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>


			<!-- Test dependencies -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito-all.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito-junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>


			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>


		</dependencies>
	</dependencyManagement>

</project>
